--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
 <h1>Hello Pedro, welcome to Dojo! 💤</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
-<%= image_tag 'sleepingPedro.jpg', alt: 'Photo of Pedro' %>
+<%= image_tag 'sleepingedro.jpg', alt: 'Photo of Pedro', width: 200; %>
