--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,22 +1,32 @@
 <div class="navbar" style="display: flex; justify-content: space-between; position: fixed; bottom: 0; width: 100%; background-color: white; padding: 10px;">
   <div class='nav-item'>
-  <%= image_tag 'search.png', alt: 'search', width: 30 %>
-  <span class='icon-text'>Search</span>
+    <%= link_to activities_path do %>
+      <%= image_tag 'search.png', alt: 'search', width: 30 %>
+      <span class='icon-text'>Search</span>
+    <% end %>
   </div>
   <div class='nav-item'>
-  <%= image_tag 'gym.png', alt: 'gym', width: 30 %>
-  <span class='icon-text'>Activities</span>
+    <%= link_to activities_path do %>
+      <%= image_tag 'gym.png', alt: '', width: 30 %>
+      <span class='icon-text'>Activities</span>
+    <% end %>
   </div>
   <div class='nav-item'>
-  <%= image_tag 'community.png', alt: 'community', width: 30 %>
-  <span class='icon-text'>Community</span>
+    <%= link_to activities_path do %>
+      <%= image_tag 'community.png', alt: 'community', width: 30 %>
+      <span class='icon-text'>Community</span>
+    <% end %>
   </div>
   <div class='nav-item'>
-  <%= image_tag 'message.png', alt: 'messages', width: 30 %>
-  <span class='icon-text'>Messaging</span>
+    <%= link_to activities_path do %>
+      <%= image_tag 'message.png', alt: 'messages', width: 30 %>
+      <span class='icon-text'>Messaging</span>
+    <% end %>
   </div>
   <div class='nav-item'>
-  <%= image_tag 'user.png', alt: 'account', width: 30 %>
-  <span class='icon-text'>Account</span>
+    <%= link_to activities_path do %>
+      <%= image_tag 'user.png', alt: 'account', width: 30 %>
+      <span class='icon-text'>Account</span>
+    <% end %>
   </div>
 </div>
