--- a/app/assets/stylesheets/pages/_activities.scss
+++ b/app/assets/stylesheets/pages/_activities.scss
@@ -13,8 +13,11 @@
 }
 
 .activity-details {
+  background-color: #1e1e1e;
+  color: #fff;
   padding: 20px;
-  text-align: center;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .activity-title {
@@ -27,13 +30,13 @@
   font-size: 1.5rem;
   font-weight: normal;
   margin-top: 10px;
-  color: #555;
+  color: #fff;
 }
 
 .activity-address, .activity-time {
   font-size: 1rem;
   margin-top: 10px;
-  color: #333;
+  color: #fff;
 }
 
 .rating-box {
@@ -49,7 +52,7 @@
 
 .rating-box:hover {
   transform: scale(1.05);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(73, 13, 252, 0.1);
 }
 
 .rating-left, .rating-middle, .rating-right {
@@ -141,4 +144,14 @@
   color: #3498db;
   text-decoration: underline;
   cursor: pointer;
+}
+
+body {
+  body {
+    background-color: #fff;
+    color: #333;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
 }
