--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,9 +1,8 @@
-<h1>Activities show 🥷</h1>
 <div class="activity-image">
   <%= image_tag 'man_boxing.png', alt: 'Boxing Lesson', class: 'activity-img' %>
 </div>
 
-
+<div class= body-activity>
 <!-- Activity Details Section -->
 <div class="activity-details">
   <h1 class="activity-title">Boxing lesson at the Glow after Pot Luck</h1>
@@ -37,4 +36,5 @@
 
   <!-- Show More Link -->
   <a href="#" class="show-more">Show More</a>
+</div>
 </div>
