--- a/app/views/shared/_search_bar.html.erb
+++ b/app/views/shared/_search_bar.html.erb
@@ -1,5 +1,5 @@
 <div class="search-bar">
-  <%= form_with url: root_path, method: :get, class: "d-flex", local: true do %>
+  <%= form_with url: activities_path, method: :get, class: "d-flex", local: true do %>
     <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search for an activity..." %>
     <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
   <% end %>
