--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,21 +1,26 @@
-<h1>Activities index 🥷</h1>
-<%= render 'shared/search_bar' %>
-<% if @activities.any? %>
-  <div class="activities-list">
-    <% @activities.each do |activity| %>
-      <div class="activity-item">
-        <h3><%= activity.title %></h3>
-        <p><%= activity.description %></p>
-        <p><%= activity.category %></p>
-        <p><%= activity.address %></p>
-        <p><%= activity.teacher %></p>
-        <p><%= activity.limit %></p>
-        <p><%= activity.event_time %></p>
-        <p><%= activity.duration %></p>
-        <br>
-      </div>
-    <% end %>
-  </div>
-<% else %>
-  <p>No activities found matching your search.</p>
-<% end %>
+<div class="container">
+
+  <%= render 'shared/search_bar' %>
+
+  <% if @activities.any? %>
+    <div class="activities-list">
+      <% @activities.each do |activity| %>
+        <div class="activity-item">
+          <%= link_to activity_path(activity) do %>
+              <div class="activities-image" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://i0.wp.com/www.muscleandfitness.com/wp-content/uploads/2020/05/uppercut-boxing-man.jpg?w=1180&quality=86&strip=all);">
+                <h2 class="activity-name"><strong><%= activity.title %></strong></h2>
+              </div>
+
+          <div class="activity-text">
+            <h4><strong><%= activity.description %></strong></h4>
+            <p><u><%= activity.address %></u></p>
+            <p><%= activity.event_time %> (duration: <%= activity.duration %>h)</p>
+          </div>
+        </div>
+        <% end %>
+      <% end %>
+    </div>
+  <% else %>
+    <p>No activities found matching your search.</p>
+  <% end %>
+</div>
