--- a/app/views/shared/_search_bar.html.erb
+++ b/app/views/shared/_search_bar.html.erb
@@ -1,6 +1,6 @@
 
 <div class="search-container">
-  <%= form_with url: root_path, method: :get, local: true do %>
+  <%= form_with url: activities_path, method: :get, local: true do %>
     <%= text_field_tag :query, params[:query], class: "search-input", placeholder: "🔎      Your next activity..." %>
     <%= submit_tag "Search", name: "", class: "search-button" %>
   <% end %>
