--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,6 +14,7 @@
         <%= link_to new_user_registration_path do %>
         <p>Sign Up</p>
         <% end %>
+        </div>
       </div>
     </div>
     <div class="home-body">
@@ -26,4 +27,3 @@
     <%= image_tag 'editors-choice-badge.png', width: 120 %>
     </div>
   </body>
-
