--- a/app/assets/stylesheets/pages/_activities-index.scss
+++ b/app/assets/stylesheets/pages/_activities-index.scss
@@ -42,3 +42,32 @@ a {
   margin-top: 1vh;
   border-top: 1px solid #A7E6FF;
 }
+
+.activities-map {
+  width: 100%;
+  height: 90vh;
+  border-radius:10px;
+  z-index: 1;
+}
+
+.activities-map-button {
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+  padding-right: 4vh;
+  padding-left: 4vh;
+  border-radius: 30px;
+  border: 1px solid white;
+  margin: 110px;
+  position: sticky;
+  bottom: 12vh;
+  z-index: 2;
+  margin:0 auto;
+  display:block;
+}
+
+.mapboxgl-ctrl-attrib.mapboxgl-compact-show {
+  display: none;
+}
