--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,6 +16,7 @@
         <% end %>
       </div>
     </div>
+    </div>
     <div class="home-body">
     <h1>“Your Passport to Local Activities and Fitness On-the-Go.”</h1>
     </div>
@@ -26,4 +27,3 @@
     <%= image_tag 'editors-choice-badge.png', width: 120 %>
     </div>
   </body>
-
