--- a/app/assets/stylesheets/pages/_activities.scss
+++ b/app/assets/stylesheets/pages/_activities.scss
@@ -5,11 +5,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  overflow: hidden;
 }
 
 .activity-img {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .activity-details {
