--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -7,7 +7,7 @@
 <div class="activity-details">
   <h1 class="activity-title">Boxing lesson at the Glow after Pot Luck</h1>
   <div class="activity-subtitle">
-    <%= link_to club_path do %>
+    <%= link_to club_path(@activity.club) do %>
     <h2>Le Wagon Dojo</h2>
     <% end %>
 
