--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -23,15 +23,15 @@
       <div class="social-links">
         <div class='location-tag'>
           <i class="fa-solid fa-location-dot"></i>
-          <p class='icon-text'>Cantersteen 10, 1000 Bruxelles</p>
+          <p class='club-icon-text'>Cantersteen 10, 1000 Bruxelles</p>
         </div>
         <div class='instagram-tag'>
           <i class="fa-brands fa-instagram"></i>
-          <span class='icon-text'>@lewagonbelgium</span>
+          <span class='club-icon-text'>@lewagonbelgium</span>
         </div>
         <div class='phone-tag'>
           <i class="fa-solid fa-phone"></i>
-          <span class='icon-text'>+32 4 78 566 980</span>
+          <span class='club-icon-text'>+32 4 78 566 980</span>
         </div>
       </div>
       <div class="map">
@@ -39,6 +39,8 @@
       </div>
     </div>
 </div>
+
+<div class="container">
 <h1 class='activities-title'>Activities</h1>
  <div class="activities-list">
       <% @activities.each do |activity| %>
@@ -57,3 +59,4 @@
         <% end %>
       <% end %>
     </div>
+</div>
