--- a/app/assets/stylesheets/pages/_club.scss
+++ b/app/assets/stylesheets/pages/_club.scss
@@ -82,7 +82,7 @@
 
 .location-tag {
   color: white;
-  max-width: 100px;
+  max-width: 150px;
   word-break: break-word;
   display: flex;
 }
@@ -94,7 +94,7 @@
 }
 
 .club-icon-text {
-  color: black;
+  color: white;
   margin-left: 5px;
 }
 
@@ -114,7 +114,7 @@
   margin-right: -15px;
   height:180px;
   width:180px;
-  margin-left: 60px;
+  margin-left: 23px;
   border-radius: 5px;
 }
 
@@ -129,4 +129,13 @@
 .activities-title {
   margin-left: 15px;
   margin-top: 10px;
+}
+
+#activities-index {
+  margin-top: 33px;
+}
+
+.activities-title-index {
+  margin-top: 33px;
+  margin-left: 17px;
 }
