--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -40,23 +40,10 @@
     </div>
 </div>
 
-<div class="container">
-<h1 class='activities-title'>Activities</h1>
- <div class="activities-list">
-      <% @activities.each do |activity| %>
-        <div class="activity-item">
-          <%= link_to activity_path(activity) do %>
-              <div class="activities-image" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://i0.wp.com/www.muscleandfitness.com/wp-content/uploads/2020/05/uppercut-boxing-man.jpg?w=1180&quality=86&strip=all);">
-                <h2 class="activity-name"><strong><%= activity.title %></strong></h2>
-              </div>
+<h2 class='activities-title-index'>Activities</h2>
 
-          <div class="activity-text">
-            <h4><strong><%= activity.description %></strong></h4>
-            <p><u><%= activity.address %></u></p>
-            <p><%= activity.event_time %> (duration: <%= activity.duration %>h)</p>
-          </div>
-        </div>
-        <% end %>
-      <% end %>
-    </div>
-</div>
+<div id="activities-index">
+    <%= render 'shared/activities' %>
+  </div>
+
+<%= render "shared/navbar" %>
