--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -8,7 +8,10 @@
   <h1 class="activity-title">Boxing lesson at the Glow after Pot Luck</h1>
   <div class="activity-subtitle">
     <%= link_to club_path(@activity.club) do %>
-    <h2>Le Wagon Dojo</h2>
+      <div class='dojo-title' style="display: flex; align-items: center; text-decoration: underline;">
+        <h2>Le Wagon Dojo</h2>
+        <i class="fa-solid fa-user-ninja" style='margin-left: 10px; margin-bottom: 15px;'></i>
+       </div>
     <% end %>
 
   <!-- Address and Time -->
