--- a/app/assets/stylesheets/pages/_activities-index.scss
+++ b/app/assets/stylesheets/pages/_activities-index.scss
@@ -44,13 +44,16 @@ a {
 }
 
 .activities-map {
-  width: 100%;
-  height: 90vh;
-  border-radius:10px;
-  z-index: 1;
+  height: 80vh;
+  border-radius: 10px;
 }
 
-.activities-map-button {
+.activities-map canvas.mapboxgl-canvas {
+  height: 80vh !important;
+  width: auto !important;
+}
+
+.map-button {
   background-color: black;
   color: white;
   font-weight: bold;
@@ -64,10 +67,18 @@ a {
   position: sticky;
   bottom: 12vh;
   z-index: 2;
-  margin:0 auto;
-  display:block;
+  margin: 0 auto;
+  display: block;
 }
 
 .mapboxgl-ctrl-attrib.mapboxgl-compact-show {
+  display: none;
+}
+
+.mapboxgl-ctrl-attrib.mapboxgl-compact {
+  display: none;
+}
+
+a.mapboxgl-ctrl-logo.mapboxgl-compact {
   display: none;
 }
