improved the activity page

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -21,7 +21,7 @@
   <!-- Rating Section -->
   <div class="rating-box">
   <div class="rating-left">
-    <div class="rating-text">4.95 </div>
+    <div class="rating-texts">4.95 </div>
     <div class="stars">
       <%= "*" * 5 %> <!-- This could dynamically generate 4 stars -->
     </div>
