--- a/app/assets/stylesheets/pages/_activities.scss
+++ b/app/assets/stylesheets/pages/_activities.scss
@@ -1,6 +1,6 @@
 .activity-image {
   width: 100%;
-  height: 33vh; /* 1/3 of the page height */
+  height: 33vh;
   background-color: #f0f0f0;
   display: flex;
   justify-content: center;
@@ -40,9 +40,10 @@
 
 .activity-address,
 .activity-time {
+  font-weight: normal;
   font-size: 1rem;
   margin-top: 10px;
-  color: #070707;
+  color: #908d8d;
 }
 
 .rating-box {
@@ -82,16 +83,19 @@
 
 }
 
-.rating-text {
-  font-size: 20px;
+.rating-texts {
+  font-size: 12px;
   font-weight: bold;
   color: #070707;
   margin-bottom: 10px;
+  margin-left: -1px;
 }
 
 .user-favorite {
-  font-size: 16px;
+  font-size: 12px;
   font-weight: bold;
+  margin-bottom: 2px;
+  color: #070707;
 }
 
 p {
@@ -100,13 +104,15 @@ p {
 }
 
 .reviews {
-  font-size: 18px;
+  font-size: 12px;
   font-weight: bold;
+  color: #070707;
 }
 
 .reviews-text {
-  font-size: 14px;
-  color: #666666;
+  font-size: 12px;
+  font-weight: bold;
+  color: #070707;
 }
 
 .rating-middle {
@@ -122,9 +128,10 @@ p {
 
 .activity-description {
   margin-top: 30px;
+  font-weight: normal;
   font-size: 1rem;
   line-height: 1.6;
-  color: #070707;
+  color: #908d8d;
 }
 
 .show-more {
