added pins to map

--- a/app/assets/stylesheets/pages/_activities-index.scss
+++ b/app/assets/stylesheets/pages/_activities-index.scss
@@ -20,6 +20,11 @@
   color: white;
 }
 
+.activities-name-info-window {
+  padding-top: 10px;
+  color: black;
+}
+
 .activities-text {
   padding-top: 10px;
 }
