--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,3 +1,7 @@
+<%= link_to activities_path, class: 'back-button' do %>
+  <%=image_tag 'back-btn', alt: 'Back', class: 'back-button-img' %>
+  <% end %>
+
 <div class="activity-image">
   <%= image_tag 'man_boxing.png', alt: 'Boxing Lesson', class: 'activity-img' %>
 </div>
