--- a/app/assets/stylesheets/pages/_club.scss
+++ b/app/assets/stylesheets/pages/_club.scss
@@ -1,18 +1,19 @@
+body {
+  background-color: white;
+}
 
 .back-button {
-  position: absolute;
-  top: 10px;
-  right: 324px;
-  background-color: white;
-  color: white;
-  padding: 10px;
-  border-radius: 50%;
-  text-decoration: none;
+  position: sticky;
+  top: 16px;
   z-index: 10;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 1px 1px 1px gray;
+  margin-left: 8px;
+}
+
+.back-button-img {
+  width: 30px;
+  height: 30px;
+  background-color: white;
+  border-radius: 50%;
 }
 
 
