--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -1,7 +1,7 @@
-<div class="activity-image" style="position: relative;">
-  <%= link_to request.referrer || root_path, class: 'back-button' do %>
-  <i class="fa-solid fa-backward-step"></i>
+ <%= link_to activity_path, class: 'back-button' do %>
+  <%=image_tag 'back-btn', alt: 'Back', class: 'back-button-img' %>
   <% end %>
+<div class="activity-image" style="position: relative;">
   <%= image_tag 'lewagon.jpg', alt: 'le wagon school logo', class: 'club-img' %>
 </div>
 
