Filtering by category on activities index page works properly

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,3 +1,5 @@
+<body>
+
 <div class="container"
      data-controller="map-button">
 
@@ -7,36 +9,52 @@
 
   <div id="index-categories">
     <div class="category-item">
+      <%= link_to activities_path(category: "Boxing") do %>
       <%= image_tag "boxing.png", height: 50, width: 50, alt: "Boxing logo" %>
       <strong><p>Boxing</p></strong>
+      <% end %>
     </div>
     <div class="category-item">
+      <%= link_to activities_path(category: "Football") do %>
       <%= image_tag "football.png", height: 50, width: 50, alt: "Boxing logo" %>
      <strong><p>Football</p></strong>
+     <% end %>
     </div>
     <div class="category-item">
+      <%= link_to activities_path(category: "Yoga") do %>
       <%= image_tag "yoga.png", height: 50, width: 50, alt: "Boxing logo" %>
       <strong><p>Yoga</p></strong>
+      <% end %>
     </div>
     <div class="category-item">
+      <%= link_to activities_path(category: "Racket") do %>
       <%= image_tag "tennis.png", height: 50, width: 50, alt: "Boxing logo" %>
       <strong><p>Racket</p></strong>
+      <% end %>
     </div>
     <div class="category-item">
+      <%= link_to activities_path(category: "Cardio") do %>
       <%= image_tag "cardio.png", height: 50, width: 50, alt: "Boxing logo" %>
       <strong><p>Cardio</p></strong>
+      <% end %>
     </div>
     <div class="category-item">
+      <%= link_to activities_path(category: "Weights") do %>
       <%= image_tag "weight.png", height: 50, width: 50, alt: "Boxing logo" %>
       <strong><p>Weights</p></strong>
+      <% end %>
     </div>
     <div class="category-item">
+      <%= link_to activities_path(category: "Outdoor") do %>
       <%= image_tag "outdoor.png", height: 50, width: 50, alt: "Boxing logo" %>
       <strong><p>Outdoor</p></strong>
+      <% end %>
     </div>
     <div class="category-item">
+      <%= link_to activities_path(category: "Water") do %>
       <%= image_tag "water.png", height: 50, width: 50, alt: "Boxing logo" %>
       <strong><p>Water</p></strong>
+      <% end %>
     </div>
   </div>
 
@@ -66,3 +84,5 @@
 </div>
 
 <%= render "shared/navbar" %>
+
+</body>
