--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class='nav-item'>
     <% if user_signed_in? %>
-      <%= link_to account_path do %>
+      <%= link_to my_clubs_path do %>
         <%= image_tag 'user.png', alt: 'account', width: 30 %>
         <span class='icon-text'>Account</span>
       <% end %>
