--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
     </div>
     </div>
     <div class="home-body">
-    <h1>“Your Passport to Local Activities and Fitness On-the-Go.”</h1>
+    <h1 class="rocknroll-one-regular">“Your Passport to Local Activities and Fitness On-the-Go.”</h1>
     </div>
     <div class='search-bar'>
       <%= render 'shared/search_bar' %>
