--- a/app/views/shared/_search_bar.html.erb
+++ b/app/views/shared/_search_bar.html.erb
@@ -1,6 +1,6 @@
 <div class="search-container">
   <%= form_with(url: activities_path, method: :get, class: 'd-flex flex-column align-items-center') do %>
-    <%= image_tag "search", class: "search_picture" %>
+    <%= image_tag "search.png", class: "search_picture" %>
     <%= text_field_tag :location, params[:location], class: 'form-control mb-2 rounded-3 margin 5px', placeholder: '       Enter your location' %>
     <%= submit_tag "Search", name: "", id: "search-button", class: 'btn btn-primary small-btn' %>
   <% end %>
