back button fixed

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,5 +1,5 @@
 <%= link_to activities_path, class: 'back-button' do %>
-  <%=image_tag 'back-btn', alt: 'Back', class: 'back-button-img' %>
+  <%=image_tag 'back-btn.png', alt: 'Back', class: 'back-button-img' %>
   <% end %>
 
 <div class="activity-image">
