--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -1,5 +1,5 @@
  <%= link_to activity_path, class: 'back-button' do %>
-  <%=image_tag 'back-btn', alt: 'Back', class: 'back-button-img' %>
+  <%=image_tag 'back-btn.png', alt: 'Back', class: 'back-button-img' %>
   <% end %>
 <div class="activity-image" style="position: relative;">
   <%= image_tag 'lewagon.jpg', alt: 'le wagon school logo', class: 'club-img' %>
