--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -1,4 +1,4 @@
- <%= link_to activity_path, class: 'back-button' do %>
+ <%= link_to request.referrer || root_path, class: 'back-button' do %>
   <%=image_tag 'back-btn.png', alt: 'Back', class: 'back-button-img' %>
   <% end %>
 <div class="activity-image" style="position: relative;">
