css for the search bar

--- a/app/assets/stylesheets/pages/_search_bar.scss
+++ b/app/assets/stylesheets/pages/_search_bar.scss
@@ -33,7 +33,7 @@
 
 .search_picture{
   width: 25px;
-  position: absolute;
-  left: 27px;
-  top: 353px;
+  position: relative;
+  left: -138px;
+  top: 37px;
 }
