--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <h2 class="text-center"><strong>Sign up</strong></h2>
-  <div class="container mt-5">
+  <div class="container mt-5 mx-auto">
     <div class="row justify-content-center">
       <div class="col-lg-6 col-md-8 col-sm-10">
         <div class="card shadow-lg border-0">
@@ -8,32 +8,32 @@
             <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
               <%= f.error_notification %>
 
-              <div class="form-inputs">
+              <div class="form-inputs mx-auto">
                 <%= f.input :first_name,
                              required: true,
-                             input_html: { placeholder: "Your first name", class: "text" } %>
+                             input_html: { placeholder: "Your first name", class: "text mx-auto" } %>
 
                 <%= f.input :last_name,
                              required: true,
-                             input_html: { placeholder: "Your last name", class: "text" } %>
+                             input_html: { placeholder: "Your last name", class: "text mx-auto" } %>
 
                 <%= f.input :username,
                              required: true,
-                             input_html: { placeholder: "Choose a username", class: "text" } %>
+                             input_html: { placeholder: "Choose a username", class: "text mx-auto" } %>
 
                  <%= f.input :email,
                               required: true,
                               autofocus: true,
-                              input_html: { autocomplete: "email", placeholder: "Your email address", class: "text" } %>
+                              input_html: { autocomplete: "email", placeholder: "Your email address", class: "text mx-auto" } %>
 
                  <%= f.input :password,
                               required: true,
                               hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                              input_html: { autocomplete: "new-password", placeholder: "Create a password", class: "text" } %>
+                              input_html: { autocomplete: "new-password", placeholder: "Create a password", class: "text mx-auto" } %>
 
                  <%= f.input :password_confirmation,
                               required: true,
-                              input_html: { autocomplete: "new-password", placeholder: "Confirm your password", class: "text" } %>
+                              input_html: { autocomplete: "new-password", placeholder: "Confirm your password", class: "text mx-auto" } %>
              </div>
 
               <div class="form-actions">
