--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -46,7 +46,7 @@
   </p>
 
   <!-- Show More Link -->
-  <a href="#" class="show-more">Show More</a>
+  <%# <a href="#" class="show-more">Show More</a> %>
 </div>
 </div>
 
