--- a/app/assets/stylesheets/pages/_activities.scss
+++ b/app/assets/stylesheets/pages/_activities.scss
@@ -22,8 +22,6 @@
   background-color: #fff;
   color: #070707;
   padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .activity-title {
@@ -159,26 +157,17 @@ body {
   background-color: white;
 }
 
-
-
-
-
-
-
-
-
-
-
 .navbottom {
   margin-top: 40px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   gap: 10px;
   position: fixed;
   bottom: 0;
   width: 100%;
   background-color: white;
   padding: 10px;
+  border-top: 1px solid #A7E6FF;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
