--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -36,6 +36,7 @@ body.home-page {
 }
 .navbar {
   color: gray;
+  border-top: 2px solid #A7E6FF;
 }
 
 .navbuttons a {
@@ -62,8 +63,9 @@ body.home-page {
 
 .nav-item {
   a {
+  font-size: 25px;
+  font-weight: 600;
   display: flex;
-  flex-direction: column;
   align-items: center;
   margin-bottom: 10px;
   color: black;
